--- a/package.json
+++ b/package.json
@@ -24,7 +24,10 @@
     "@ng-bootstrap/ng-bootstrap": "^18.0.0",
     "@ngneat/transloco": "^6.0.4",
     "@ngneat/transloco-locale": "^5.1.2",
+    "@types/marked": "^6.0.0",
+    "marked": "^15.0.12",
     "ngx-bootstrap": "^19.0.2",
+    "ngx-markdown": "^19.1.1",
     "ngx-toastr": "^19.0.0",
     "rxjs": "~7.8.0",
     "tslib": "^2.3.0",
@@ -35,6 +38,7 @@
     "@angular/cli": "^19.2.8",
     "@angular/compiler-cli": "^19.2.0",
     "@types/jasmine": "~5.1.0",
+    "@types/uuid": "^10.0.0",
     "jasmine-core": "~5.6.0",
     "karma": "~6.4.0",
     "karma-chrome-launcher": "~3.2.0",
