--- a/angular.json
+++ b/angular.json
@@ -32,10 +32,10 @@
               }
             ],
             "styles": [
+              "src/custom-theme.scss",
               "node_modules/ngx-toastr/toastr.css",
               "node_modules/@fortawesome/fontawesome-free/css/all.min.css",
               "src/styles.css"
-              
             ],
             "scripts": [
               "node_modules/@popperjs/core/dist/umd/popper.min.js"
